--- a/index.html
+++ b/index.html
@@ -5,26 +5,41 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Vision Journal</title>
 
-  <!-- styles -->
+  <!-- your styles -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Leaflet CSS & JS -->
+  <!-- Leaflet core CSS & JS -->
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
   />
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
 
-  <!-- Firebase SDKs -->
+  <!-- MarkerCluster plugin CSS & JS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"
+  />
+  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+
+  <!-- Firebase compat SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
 </head>
 <body>
-  <header class="card"><h1>Vision Journal</h1></header>
+  <header class="card">
+    <h1>Vision Journal</h1>
+  </header>
 
   <div class="layout">
+    <!-- MAIN COLUMN -->
     <main id="main-content">
+      <!-- LOGIN SCREEN -->
       <div id="login-screen" class="card">
         <h2>Sign Up or Log In</h2>
         <input type="email" id="email" placeholder="you@example.com" />
@@ -34,15 +49,18 @@
         <p id="login-msg"></p>
       </div>
 
+      <!-- JOURNAL + INSIGHTS -->
       <div id="journal-screen" class="hidden">
+        <!-- INSIGHTS MAP -->
         <div id="insights-box" class="card">
           <h2>Insights</h2>
           <div id="map"></div>
           <p style="text-align:center;font-size:.9rem;color:#666;">
-            (Zoom & pan to explore hot spots)
+            (Zoom &amp; pan to explore hot spots)
           </p>
         </div>
 
+        <!-- NEW ENTRY FORM -->
         <div id="new-entry-box" class="card">
           <h2>New Entry</h2>
           <select id="type">
@@ -53,21 +71,32 @@
           </select>
           <textarea id="text" placeholder="Describe..."></textarea>
           <input id="tags" placeholder="tags, comma-separated" />
-          <label><input type="checkbox" id="isPublic" /> Make Public</label>
+          <label>
+            <input type="checkbox" id="isPublic" /> Make Public
+          </label>
 
           <button id="detect-location">Detect My Country/State</button>
           <p id="location-display" style="font-size:.9rem;color:#555;">
             (no location yet)
           </p>
           <div id="manual-location" class="hidden">
-            <input type="text" id="country-input" placeholder="Country (required)" />
-            <input type="text" id="state-input"   placeholder="State/Region (required)" />
+            <input
+              type="text"
+              id="country-input"
+              placeholder="Country (required)"
+            />
+            <input
+              type="text"
+              id="state-input"
+              placeholder="State/Region (required)"
+            />
           </div>
 
           <button id="save-entry">Save</button>
           <p id="entry-msg"></p>
         </div>
 
+        <!-- MY JOURNAL LIST -->
         <div id="journal-box" class="card">
           <h2>My Journal</h2>
           <ul id="entries"></ul>
@@ -75,6 +104,7 @@
       </div>
     </main>
 
+    <!-- RIGHT SIDEBAR -->
     <aside id="feed-screen">
       <div id="logout-box" class="card hidden">
         <button id="logout">Logout</button>
@@ -99,7 +129,7 @@
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth(), db = firebase.firestore();
 
-    // ── UI Refs ───────────────────────────────
+    // ── UI References ─────────────────────────
     const loginScreen   = document.getElementById('login-screen');
     const journalScreen = document.getElementById('journal-screen');
     const logoutBox     = document.getElementById('logout-box');
@@ -118,23 +148,32 @@
     const entriesList   = document.getElementById('entries');
     const feedEntries   = document.getElementById('feed-entries');
 
-    // ── Leaflet Map ───────────────────────────
-    let map, leafletReady = false;
+    // ── Leaflet + Cluster Setup ───────────────
+    let map, markerGroup, leafletReady = false;
     try {
-      map = L.map('map').setView([20,0],2);
+      map = L.map('map').setView([20, 0], 2);
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution:'&copy; OpenStreetMap'
+        attribution: '&copy; OpenStreetMap'
       }).addTo(map);
-      leafletReady = true;
-    } catch(e){ console.warn('Leaflet init failed:', e) }
 
-    // ── Auth ───────────────────────────────────
+      // create cluster group
+      markerGroup = L.markerClusterGroup();
+      map.addLayer(markerGroup);
+
+      leafletReady = true;
+    } catch (e) {
+      console.warn('Leaflet init failed:', e);
+    }
+
+    // ── Authentication ────────────────────────
     signupBtn.onclick = () =>
       auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
           .catch(e => loginMsg.textContent = e.message);
+
     loginBtn.onclick = () =>
       auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
           .catch(e => loginMsg.textContent = e.message);
+
     logoutBtn.onclick = () => auth.signOut();
 
     auth.onAuthStateChanged(user => {
@@ -142,7 +181,7 @@
         loginScreen.classList.add('hidden');
         journalScreen.classList.remove('hidden');
         logoutBox.classList.remove('hidden');
-        if (leafletReady) setTimeout(()=>map.invalidateSize(),200);
+        if (leafletReady) setTimeout(() => map.invalidateSize(), 200);
         loadJournal();
       } else {
         loginScreen.classList.remove('hidden');
@@ -157,7 +196,7 @@
     detectBtn.onclick = () => {
       locationDisp.textContent = 'Detecting…';
       fetch('https://ipapi.co/json/')
-        .then(r=>r.json())
+        .then(r => r.json())
         .then(d => {
           if (d.country_name && d.region) {
             locationDisp.textContent = `${d.region}, ${d.country_name}`;
@@ -172,16 +211,16 @@
         });
     };
 
-    // ── Save Entry + Geocode & Duplicate ──────
+    // ── Save Entry & Duplicate if Public ─────
     saveBtn.onclick = async () => {
       const type     = document.getElementById('type').value;
       const text     = document.getElementById('text').value;
       const tags     = document.getElementById('tags').value
-                        .split(',').map(s=>s.trim()).filter(Boolean);
+                        .split(',').map(s => s.trim()).filter(Boolean);
       const isPublic = document.getElementById('isPublic').checked;
       const country  = countryInput.value.trim();
       const state    = stateInput.value.trim();
-      if (!country||!state) {
+      if (!country || !state) {
         alert('Please detect or enter country & state.');
         return;
       }
@@ -189,23 +228,23 @@
       let payload = {
         userId: auth.currentUser.uid,
         type, text, tags, isPublic,
-        location:{country, state},
+        location: { country, state },
         createdAt: firebase.firestore.FieldValue.serverTimestamp()
       };
 
       try {
-        // save to user journal
+        // 1) save to private journal
         await db.collection('visions')
-          .doc(auth.currentUser.uid)
-          .collection('entries')
-          .add(payload);
+                .doc(auth.currentUser.uid)
+                .collection('entries')
+                .add(payload);
 
-        // if public, geocode & duplicate to flat collection
+        // 2) if public, geocode + write to flat publicEntries
         if (isPublic) {
           const q = encodeURIComponent(`${state}, ${country}`);
           const res = await fetch(
             `https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`
-          ).then(r=>r.json());
+          ).then(r => r.json());
           if (res[0]) {
             payload.lat = parseFloat(res[0].lat);
             payload.lon = parseFloat(res[0].lon);
@@ -217,34 +256,36 @@
         loadJournal();
         loadPublicFeed();
         plotPublicMarkers();
-      } catch(e) {
+      } catch (e) {
         console.error(e);
         document.getElementById('entry-msg').textContent = 'Save failed.';
       }
     };
 
-    // ── Load Personal Journal ───────────────────
-    function loadJournal(){
+    // ── Load Private Journal ───────────────────
+    function loadJournal() {
       entriesList.innerHTML = '';
       db.collection('visions')
         .doc(auth.currentUser.uid)
         .collection('entries')
-        .orderBy('createdAt','desc')
+        .orderBy('createdAt', 'desc')
         .get()
-        .then(snap => snap.forEach(doc=>{
-          const d = doc.data();
-          const li = document.createElement('li');
-          li.textContent = `${d.type}: ${d.text}`;
-          entriesList.append(li);
-        }))
+        .then(snap => {
+          snap.forEach(doc => {
+            const d = doc.data();
+            const li = document.createElement('li');
+            li.textContent = `${d.type}: ${d.text}`;
+            entriesList.append(li);
+          });
+        })
         .catch(console.error);
     }
 
     // ── Load Public Feed ───────────────────────
-    function loadPublicFeed(){
+    function loadPublicFeed() {
       feedEntries.innerHTML = '';
       let ref = db.collection('publicEntries')
-                  .orderBy('createdAt','desc');
+                  .orderBy('createdAt', 'desc');
       if (!auth.currentUser) ref = ref.limit(10);
 
       ref.get()
@@ -268,47 +309,42 @@
          });
     }
 
-    // ── Plot Public Markers ────────────────────
-    async function plotPublicMarkers(){
+    // ── Plot Public Markers with Clustering ───
+    async function plotPublicMarkers() {
       if (!leafletReady) return;
 
-      // clear old markers
-      map.eachLayer(layer=>{
-        if (layer instanceof L.Marker) {
-          map.removeLayer(layer);
-        }
-      });
+      markerGroup.clearLayers();
 
-      // grab every public entry
       const snap = await db.collection('publicEntries').get();
-      // for each, geocode if needed then plot
       await Promise.all(snap.docs.map(async docSnap => {
         let d = docSnap.data();
         let { lat, lon } = d;
 
-        // if no coords yet, geocode & persist
+        // if not geocoded yet → geocode & update
         if (lat == null || lon == null) {
-          const q = encodeURIComponent(`${d.location.state}, ${d.location.country}`);
+          const q   = encodeURIComponent(`${d.location.state}, ${d.location.country}`);
           const res = await fetch(
             `https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`
-          ).then(r=>r.json());
+          ).then(r => r.json());
           if (res[0]) {
-            lat  = parseFloat(res[0].lat);
-            lon  = parseFloat(res[0].lon);
+            lat = +res[0].lat; lon = +res[0].lon;
             await docSnap.ref.update({ lat, lon });
           } else {
-            return; // skip if no geo result
+            return;  // skip if no geo result
           }
         }
 
-        // now plot
-        L.marker([lat, lon])
-          .addTo(map)
-          .bindPopup(
-            `<strong>${d.type}</strong>: ${d.text}<br>` +
-            `<em>${d.location.state}, ${d.location.country}</em>`
-          );
+        // create & add marker
+        const m = L.marker([lat, lon]).bindPopup(
+          `<strong>${d.type}</strong>: ${d.text}<br>` +
+          `<em>${d.location.state}, ${d.location.country}</em>`
+        );
+        markerGroup.addLayer(m);
       }));
+
+      // auto-zoom to show all
+      const bounds = markerGroup.getBounds();
+      if (bounds.isValid()) map.fitBounds(bounds.pad(0.5));
     }
   </script>
 </body>
