--- a/index.html
+++ b/index.html
@@ -51,12 +51,33 @@
 
       <!-- JOURNAL + INSIGHTS -->
       <div id="journal-screen" class="hidden">
-        <!-- INSIGHTS MAP -->
+        <!-- INSIGHTS MAP + FILTERS -->
         <div id="insights-box" class="card">
           <h2>Insights</h2>
+
+          <!-- Filters row -->
+          <div style="display:flex; gap:1rem; margin-bottom:0.5rem;">
+            <select id="category-filter">
+              <option value="all">All Types</option>
+              <option value="dream">Dream</option>
+              <option value="nightmare">Nightmare</option>
+              <option value="daydream">Daydream</option>
+              <option value="insight">Insight</option>
+            </select>
+            <select id="time-filter">
+              <option value="all">All time</option>
+              <option value="hour">Last hour</option>
+              <option value="day">Last 24h</option>
+              <option value="week">Last week</option>
+              <option value="month">Last month</option>
+              <option value="year">Last year</option>
+              <option value="5years">Last 5 years</option>
+            </select>
+          </div>
+
           <div id="map"></div>
           <p style="text-align:center;font-size:.9rem;color:#666;">
-            (Zoom &amp; pan to explore hot spots)
+            (Zoom & pan to explore hot spots)
           </p>
         </div>
 
@@ -130,23 +151,25 @@
     const auth = firebase.auth(), db = firebase.firestore();
 
     // ── UI References ─────────────────────────
-    const loginScreen   = document.getElementById('login-screen');
-    const journalScreen = document.getElementById('journal-screen');
-    const logoutBox     = document.getElementById('logout-box');
-    const loginMsg      = document.getElementById('login-msg');
-    const emailInput    = document.getElementById('email');
-    const passwordInput = document.getElementById('password');
-    const signupBtn     = document.getElementById('signup');
-    const loginBtn      = document.getElementById('login');
-    const logoutBtn     = document.getElementById('logout');
-    const saveBtn       = document.getElementById('save-entry');
-    const detectBtn     = document.getElementById('detect-location');
-    const locationDisp  = document.getElementById('location-display');
-    const manualDiv     = document.getElementById('manual-location');
-    const countryInput  = document.getElementById('country-input');
-    const stateInput    = document.getElementById('state-input');
-    const entriesList   = document.getElementById('entries');
-    const feedEntries   = document.getElementById('feed-entries');
+    const loginScreen     = document.getElementById('login-screen');
+    const journalScreen   = document.getElementById('journal-screen');
+    const logoutBox       = document.getElementById('logout-box');
+    const loginMsg        = document.getElementById('login-msg');
+    const emailInput      = document.getElementById('email');
+    const passwordInput   = document.getElementById('password');
+    const signupBtn       = document.getElementById('signup');
+    const loginBtn        = document.getElementById('login');
+    const logoutBtn       = document.getElementById('logout');
+    const saveBtn         = document.getElementById('save-entry');
+    const detectBtn       = document.getElementById('detect-location');
+    const locationDisp    = document.getElementById('location-display');
+    const manualDiv       = document.getElementById('manual-location');
+    const countryInput    = document.getElementById('country-input');
+    const stateInput      = document.getElementById('state-input');
+    const entriesList     = document.getElementById('entries');
+    const feedEntries     = document.getElementById('feed-entries');
+    const categoryFilter  = document.getElementById('category-filter');
+    const timeFilter      = document.getElementById('time-filter');
 
     // ── Leaflet + Cluster Setup ───────────────
     let map, markerGroup, leafletReady = false;
@@ -156,7 +179,6 @@
         attribution: '&copy; OpenStreetMap'
       }).addTo(map);
 
-      // create cluster group
       markerGroup = L.markerClusterGroup();
       map.addLayer(markerGroup);
 
@@ -188,9 +210,16 @@
         journalScreen.classList.add('hidden');
         logoutBox.classList.add('hidden');
       }
+      refreshPublic();
+    });
+
+    // whenever filters change:
+    categoryFilter.onchange = timeFilter.onchange = refreshPublic;
+
+    function refreshPublic() {
       loadPublicFeed();
       if (leafletReady) plotPublicMarkers();
-    });
+    }
 
     // ── Location Detection ─────────────────────
     detectBtn.onclick = () => {
@@ -239,23 +268,22 @@
                 .collection('entries')
                 .add(payload);
 
-        // 2) if public, geocode + write to flat publicEntries
+        // 2) if public, geocode + write flat
         if (isPublic) {
-          const q = encodeURIComponent(`${state}, ${country}`);
+          const q   = encodeURIComponent(`${state}, ${country}`);
           const res = await fetch(
             `https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`
           ).then(r => r.json());
           if (res[0]) {
-            payload.lat = parseFloat(res[0].lat);
-            payload.lon = parseFloat(res[0].lon);
+            payload.lat = +res[0].lat;
+            payload.lon = +res[0].lon;
           }
           await db.collection('publicEntries').add(payload);
         }
 
         document.getElementById('entry-msg').textContent = 'Saved!';
         loadJournal();
-        loadPublicFeed();
-        plotPublicMarkers();
+        refreshPublic();
       } catch (e) {
         console.error(e);
         document.getElementById('entry-msg').textContent = 'Save failed.';
@@ -281,11 +309,32 @@
         .catch(console.error);
     }
 
-    // ── Load Public Feed ───────────────────────
+    // ── Load Public Feed with Filters ─────────
     function loadPublicFeed() {
       feedEntries.innerHTML = '';
-      let ref = db.collection('publicEntries')
-                  .orderBy('createdAt', 'desc');
+
+      let ref = db.collection('publicEntries');
+
+      // category
+      const cat = categoryFilter.value;
+      if (cat !== 'all') ref = ref.where('type', '==', cat);
+
+      // time window
+      const now = new Date();
+      let cutoff;
+      switch (timeFilter.value) {
+        case 'hour':   cutoff = new Date(now - 1000 * 60 * 60); break;
+        case 'day':    cutoff = new Date(now - 1000 * 60 * 60 * 24); break;
+        case 'week':   cutoff = new Date(now - 1000 * 60 * 60 * 24 * 7); break;
+        case 'month':  cutoff = new Date(now.setMonth(now.getMonth() - 1)); break;
+        case 'year':   cutoff = new Date(now.setFullYear(now.getFullYear() - 1)); break;
+        case '5years': cutoff = new Date(now.setFullYear(now.getFullYear() - 5)); break;
+      }
+      if (cutoff) {
+        ref = ref.where('createdAt', '>=', firebase.firestore.Timestamp.fromDate(cutoff));
+      }
+
+      ref = ref.orderBy('createdAt', 'desc');
       if (!auth.currentUser) ref = ref.limit(10);
 
       ref.get()
@@ -309,18 +358,37 @@
          });
     }
 
-    // ── Plot Public Markers with Clustering ───
+    // ── Plot Public Markers + Clustering ──────
     async function plotPublicMarkers() {
       if (!leafletReady) return;
 
       markerGroup.clearLayers();
 
-      const snap = await db.collection('publicEntries').get();
+      // same filtering logic:
+      let ref = db.collection('publicEntries');
+      const cat = categoryFilter.value;
+      if (cat !== 'all') ref = ref.where('type', '==', cat);
+
+      let cutoff;
+      const now = new Date();
+      switch (timeFilter.value) {
+        case 'hour':   cutoff = new Date(now - 1000 * 60 * 60); break;
+        case 'day':    cutoff = new Date(now - 1000 * 60 * 60 * 24); break;
+        case 'week':   cutoff = new Date(now - 1000 * 60 * 60 * 24 * 7); break;
+        case 'month':  cutoff = new Date(now.setMonth(now.getMonth() - 1)); break;
+        case 'year':   cutoff = new Date(now.setFullYear(now.getFullYear() - 1)); break;
+        case '5years': cutoff = new Date(now.setFullYear(now.getFullYear() - 5)); break;
+      }
+      if (cutoff) {
+        ref = ref.where('createdAt', '>=', firebase.firestore.Timestamp.fromDate(cutoff));
+      }
+
+      const snap = await ref.get();
+
       await Promise.all(snap.docs.map(async docSnap => {
         let d = docSnap.data();
         let { lat, lon } = d;
 
-        // if not geocoded yet → geocode & update
         if (lat == null || lon == null) {
           const q   = encodeURIComponent(`${d.location.state}, ${d.location.country}`);
           const res = await fetch(
@@ -330,11 +398,10 @@
             lat = +res[0].lat; lon = +res[0].lon;
             await docSnap.ref.update({ lat, lon });
           } else {
-            return;  // skip if no geo result
+            return;
           }
         }
 
-        // create & add marker
         const m = L.marker([lat, lon]).bindPopup(
           `<strong>${d.type}</strong>: ${d.text}<br>` +
           `<em>${d.location.state}, ${d.location.country}</em>`
@@ -342,7 +409,6 @@
         markerGroup.addLayer(m);
       }));
 
-      // auto-zoom to show all
       const bounds = markerGroup.getBounds();
       if (bounds.isValid()) map.fitBounds(bounds.pad(0.5));
     }
