--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
       <div id="journal-screen" class="hidden">
         <div id="insights-box" class="card">
           <h2>Insights</h2>
+
+          <!-- Filters -->
+          <div class="filters">
+            <select id="filter-type">
+              <option value="">All Types</option>
+              <option value="dream">Dream</option>
+              <option value="nightmare">Nightmare</option>
+              <option value="daydream">Daydream</option>
+              <option value="insight">Insight</option>
+            </select>
+            <select id="filter-time">
+              <option value="all">All Time</option>
+              <option value="1h">Last 1h</option>
+              <option value="24h">Last 24h</option>
+              <option value="7d">Last 7d</option>
+              <option value="30d">Last 30d</option>
+            </select>
+          </div>
+
           <div id="map"></div>
           <p style="text-align:center;font-size:.9rem;color:#666;">
             (Zoom & pan to explore hot spots)
@@ -127,8 +146,11 @@
     const stateInput    = document.getElementById('state-input');
     const entriesList   = document.getElementById('entries');
     const feedEntries   = document.getElementById('feed-entries');
+    // Filter refs
+    const filterType    = document.getElementById('filter-type');
+    const filterTime    = document.getElementById('filter-time');
 
-    // ── Leaflet Map + Clustering ─────────────────────────────
+    // ── Leaflet Map + Clustering ─────────────────────
     let map, markers, leafletReady = false;
     try {
       map = L.map('map').setView([20,0],2);
@@ -144,11 +166,9 @@
     signupBtn.onclick = () =>
       auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
         .catch(e => loginMsg.textContent = e.message);
-
     loginBtn.onclick = () =>
       auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
         .catch(e => loginMsg.textContent = e.message);
-
     logoutBtn.onclick = () => auth.signOut();
 
     auth.onAuthStateChanged(user => {
@@ -165,6 +185,9 @@
       }
       refreshPublic();
     });
+
+    // Re-run when filters change
+    filterType.onchange = filterTime.onchange = refreshPublic;
 
     function refreshPublic() {
       loadPublicFeed();
@@ -203,22 +226,17 @@
         alert('Please detect or enter country & state.');
         return;
       }
-
       let payload = {
         userId: auth.currentUser.uid,
         type, text, tags, isPublic,
         location:{country, state},
         createdAt: firebase.firestore.FieldValue.serverTimestamp()
       };
-
       try {
-        // save to user journal
         await db.collection('visions')
           .doc(auth.currentUser.uid)
           .collection('entries')
           .add(payload);
-
-        // if public, geocode & duplicate
         if (isPublic) {
           const q = encodeURIComponent(`${state}, ${country}`);
           const res = await fetch(
@@ -230,7 +248,6 @@
           }
           await db.collection('publicEntries').add(payload);
         }
-
         document.getElementById('entry-msg').textContent = 'Saved!';
         loadJournal();
         refreshPublic();
@@ -241,14 +258,14 @@
     };
 
     // ── Load Personal Journal ───────────────────
-    function loadJournal(){
+    function loadJournal() {
       entriesList.innerHTML = '';
       db.collection('visions')
         .doc(auth.currentUser.uid)
         .collection('entries')
         .orderBy('createdAt','desc')
         .get()
-        .then(snap => snap.forEach(doc=>{
+        .then(snap => snap.forEach(doc => {
           const d = doc.data();
           const li = document.createElement('li');
           li.textContent = `${d.type}: ${d.text}`;
@@ -257,13 +274,18 @@
         .catch(console.error);
     }
 
-    // ── Load Public Feed ───────────────────────
-    function loadPublicFeed(){
+    // ── Load Public Feed (with filters) ────────
+    function loadPublicFeed() {
       feedEntries.innerHTML = '';
-      let ref = db.collection('publicEntries')
-                  .orderBy('createdAt','desc');
+      let ref = db.collection('publicEntries').orderBy('createdAt','desc');
+      if (filterType.value) ref = ref.where('type','==', filterType.value);
+      if (filterTime.value!=='all') {
+        const now = Date.now();
+        let delta = { '1h':3600e3,'24h':24*3600e3,'7d':7*24*3600e3,'30d':30*24*3600e3 }[filterTime.value];
+        const cutoff = firebase.firestore.Timestamp.fromDate(new Date(now - delta));
+        ref = ref.where('createdAt','>=', cutoff);
+      }
       if (!auth.currentUser) ref = ref.limit(10);
-
       ref.get()
          .then(snap => {
            if (snap.empty) {
@@ -272,10 +294,8 @@
            }
            snap.forEach(doc => {
              const d = doc.data();
-             const loc = d.location || {};
-             const locText = loc.state 
-               ? ` (${loc.state}, ${loc.country})`
-               : '';
+             const loc = d.location||{};
+             const locText = loc.state?` (${loc.state},${loc.country})`:'';
              const li = document.createElement('li');
              li.textContent = `${d.type}: ${d.text}${locText}`;
              feedEntries.append(li);
@@ -287,19 +307,23 @@
          });
     }
 
-    // ── Plot Public Markers ────────────────────
-    async function plotPublicMarkers(){
+    // ── Plot Public Markers (with filters) ────
+    async function plotPublicMarkers() {
       if (!leafletReady) return;
-
       markers.clearLayers();
-
-      const snap = await db.collection('publicEntries').get();
-      for (let docSnap of snap.docs) {
+      let ref = db.collection('publicEntries').orderBy('createdAt','desc');
+      if (filterType.value) ref = ref.where('type','==', filterType.value);
+      if (filterTime.value!=='all') {
+        const now = Date.now();
+        let delta = { '1h':3600e3,'24h':24*3600e3,'7d':7*24*3600e3,'30d':30*24*3600e3 }[filterTime.value];
+        const cutoff = firebase.firestore.Timestamp.fromDate(new Date(now - delta));
+        ref = ref.where('createdAt','>=', cutoff);
+      }
+      const snap = await ref.get();
+      await Promise.all(snap.docs.map(async docSnap => {
         const d = docSnap.data();
         let { lat, lon } = d;
-
-        // geocode if missing
-        if (lat == null || lon == null) {
+        if (lat==null||lon==null) {
           const q = encodeURIComponent(`${d.location.state}, ${d.location.country}`);
           const res = await fetch(
             `https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`
@@ -308,18 +332,13 @@
             lat = parseFloat(res[0].lat);
             lon = parseFloat(res[0].lon);
             await docSnap.ref.update({ lat, lon });
-          } else {
-            continue;
-          }
+          } else return;
         }
-
-        const m = L.marker([lat, lon])
-                    .bindPopup(
-                      `<strong>${d.type}</strong>: ${d.text}<br>` +
-                      `<em>${d.location.state}, ${d.location.country}</em>`
-                    );
+        const m = L.marker([lat, lon]).bindPopup(
+          `<strong>${d.type}</strong>: ${d.text}<br><em>${d.location.state}, ${d.location.country}</em>`
+        );
         markers.addLayer(m);
-      }
+      }));
     }
   </script>
 </body>
